--- a/home-css.css
+++ b/home-css.css
@@ -1,6 +1,6 @@
 body
 {
-  background: url("home-gif.gif") center no-repeat;
+  background: url("home1.png") center no-repeat;
   height: 90vh;
   background-size: cover;
   padding: 0;
