--- a/home-css.css
+++ b/home-css.css
@@ -1,7 +1,7 @@
 body
 {
   background: url("home1.png") center no-repeat;
-  background-color: lightblue;
+  background-color: blue;
   height: 90vh;
   background-size: cover;
   padding: 0;
